Transform Sanji + 7 sous-chefs from advisory to active scaffolding
Sanji gains Phase P (project directory creation in Documents/projet/<techno>/)
and passes structured context (PROJECT_PATH, architecture decisions) to sous-chefs.

All 7 sous-chefs (dotnet, flutter, ts, python, rust, go, java) now:
- Use native CLI tools (flutter create, dotnet new, npm init, etc.)
- Have Write/Edit permissions to create project files
- Follow 6 active phases: scaffold → dependencies → architecture → implementation → config → verification
- Support both Sanji-routed and direct invocation

Mugiwara pipeline updated to document project creation in output.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>